public class StringBus
{
    public string GiveWeapon = "GiveWeapon";
    public string Explode = "Explode";
    public string Shoot = "Shoot";

    public string AnimationSpeed = "Speed";
    public string AnimationWithWeapon = "WithWeapon";
    public string AnimationAttackGrenade = "AttackGrenade";
    public string AnimationFall = "Fall";
    public string AnimationPunch = "Punch";

    public string Language = "Language";
    public string SettingsSoundFX = "SettingsSoundFX";
    public string SettingsMusic = "SettingsMusic";

    public string PlayerTakeAim = "TakeAim";
    public string PlayerHideAim = "HideAim";

    public string PlayerDevice = "Device";

    public string PlayerLevel = "PlayerLevel";
    public string PlayerExp = "PlayerExp";
    public string PlayerWinsCount = "PlayerWinsCount";

    public string[] NicknameBus =
    {
        "Pogo Stick", "Jellybean", "Cupcake", "Muffin", "Peanut", "Buttercup",
        "Sugarplum", "Banana Peel", "Popcorn", "Pumpkin", "Gummy Bear",
        "Cotton Candy", "Bubblegum", "Scooter", "Sunny Side", "Lemon Drop", 
        "Cherry Pie", "Cookie Dough", "Chocolate Chip", "Snickerdoodle", "Tootsie Roll",
        "Jolly Rancher", "Gummy Worm", "M&M", "Skittles", "Starburst", "Smarties", "Nerds",
        "Sweet Tart", "Fruit Loop", "Lucky Charm", "Captain Crunch", "Cocoa Puff", "Cheerio",
        "Corn Pop", "Frosted Flake", "Raisin Bran", "Cookie Crisp", "Cinnamon Toast", "Honeycomb",
        "Pop Tart", "Oreo", "Jivchik", "Reese's Pieces", "Twizzler", "Kit Kat", "Snickers", 
        "Butterfinger", "Milky Way"
    };
}
